--- a/index.html
+++ b/index.html
@@ -387,8 +387,66 @@
                     <b>大力喂蕉不要停</b>
                 </h2>
                 <ul class="rank-type">
-                    <li id="week-rank">周榜</li>
-                    <li class="active" id="day-rank">日榜</li>
+                    <li>周榜</li>
+                    <li class="active">日榜</li>
+                </ul>
+                <ul class="video-list  clearfix">
+                    <li>
+                        <a href="#"><img src="src/pic/banna9.jpg" alt=""></a>
+                        <a href="#">
+                            <h4>【阅后即瞎】你爹给你起名字时负责任吗？这儿还有更随便的</h4>
+                        </a>
+                        <a href="#"><span>UP主：阅后即瞎</span><i>🍌 66666</i></a>
+                        </l i>
+                        <li>
+                            <a href="#"><img src="src/pic/banna10.gif" alt=""></a>
+                            <a href="#">
+                                <h4>听歌喝酒看评论，网易云上评论过万的歌曲，终结篇~谢谢大家一路来的支持，谢谢...谢谢</h4>
+                            </a>
+                            <a href="#"><span>UP主：丶李米椒</span><i>🍌66666</i></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="src/pic/banna11.jpg" alt=""></a>
+                            <a href="#">
+                                <h4>【神医RAP】我还治不死你？</h4>
+                            </a>
+                            <a href="#"><span>UP主：点滴菌</span><i>🍌66666</i></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="src/pic/banna12.jpeg" alt=""></a>
+                            <a href="#">
+                                <h4>食欲不振怎么办，自助旅行自助餐 @野食小哥</h4>
+                            </a>
+                            <a href="#"><span>UP主：野食小哥</span><i>🍌66666</i></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="src/pic/banna13.jpg" alt=""></a>
+                            <a href="#">
+                                <h4>【男孩】-【卖血】我的盆友圈真精彩</h4>
+                            </a>
+                            <a href="#"><span>UP主：卖血上网a</span><i>🍌66666</i></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="src/pic/banna14.gif" alt=""></a>
+                            <a href="#">
+                                <h4>STEAM销量周榜2017年第26期 聊聊游戏界的女权</h4>
+                            </a>
+                            <a href="#"><span>UP主：SteamParty</span><i>🍌66666</i></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="src/pic/banna15.jpg" alt=""></a>
+                            <a href="#">
+                                <h4>【李云龙】王♂妃</h4>
+                            </a>
+                            <a href="#"><span>UP主：祸乱之源</span><i>🍌66666</i></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="src/pic/banna16.jpeg" alt=""></a>
+                            <a href="#">
+                                <h4>农村小伙儿用石磨做咖啡 送给雨天辛苦干活的农民工 @乡村安迪</h4>
+                            </a>
+                            <a href="#"><span>UP主：乡村安迪</span><i>🍌66666</i></a>
+                        </li>
                 </ul>
                 <ul class="video-list active clearfix">
                     <li>
@@ -446,64 +504,6 @@
                             <h4>中国交通事故合集20170712：每天10分钟最新国内车祸实例，助你提高安全意识。</h4>
                         </a>
                         <a href=""><span>UP主：交通事故video</span><i>🍌6666</i></a>
-                    </li>
-                </ul>
-                <ul class="video-list  clearfix">
-                    <li>
-                        <a href="#"><img src="src/pic/banna9.jpg" alt=""></a>
-                        <a href="#">
-                            <h4>【阅后即瞎】你爹给你起名字时负责任吗？这儿还有更随便的</h4>
-                        </a>
-                        <a href="#"><span>UP主：阅后即瞎</span><i>🍌66666</i></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="src/pic/banna10.gif" alt=""></a>
-                        <a href="#">
-                            <h4>听歌喝酒看评论，网易云上评论过万的歌曲，终结篇~谢谢大家一路来的支持，谢谢...谢谢</h4>
-                        </a>
-                        <a href="#"><span>UP主：丶李米椒</span><i>🍌66666</i></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="src/pic/banna11.jpg" alt=""></a>
-                        <a href="#">
-                            <h4>【神医RAP】我还治不死你？</h4>
-                        </a>
-                        <a href="#"><span>UP主：点滴菌</span><i>🍌66666</i></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="src/pic/banna12.jpeg" alt=""></a>
-                        <a href="#">
-                            <h4>食欲不振怎么办，自助旅行自助餐 @野食小哥</h4>
-                        </a>
-                        <a href="#"><span>UP主：野食小哥</span><i>🍌66666</i></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="src/pic/banna13.jpg" alt=""></a>
-                        <a href="#">
-                            <h4>【男孩】-【卖血】我的盆友圈真精彩</h4>
-                        </a>
-                        <a href="#"><span>UP主：卖血上网a</span><i>🍌66666</i></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="src/pic/banna14.gif" alt=""></a>
-                        <a href="#">
-                            <h4>STEAM销量周榜2017年第26期 聊聊游戏界的女权</h4>
-                        </a>
-                        <a href="#"><span>UP主：SteamParty</span><i>🍌66666</i></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="src/pic/banna15.jpg" alt=""></a>
-                        <a href="#">
-                            <h4>【李云龙】王♂妃</h4>
-                        </a>
-                        <a href="#"><span>UP主：祸乱之源</span><i>🍌66666</i></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="src/pic/banna16.jpeg" alt=""></a>
-                        <a href="#">
-                            <h4>农村小伙儿用石磨做咖啡 送给雨天辛苦干活的农民工 @乡村安迪</h4>
-                        </a>
-                        <a href="#"><span>UP主：乡村安迪</span><i>🍌66666</i></a>
                     </li>
                 </ul>
                 <div class="guided-vision">
@@ -635,6 +635,220 @@
                             <a href="#" class="view-more">查看更多></a>
                         </li>
                     </ul>
+                </div>
+            </div>
+        </section>
+        <section class="entertainment center clearfix">
+            <div class="column-left">
+                <h2>
+                    <img src="src/icon/fish.gif" alt="">
+                    <span>娱乐</span>
+                    <button><i class="iconfont icon-refresh"></i>换一批</button>
+                    <div class="title-right middle">
+                        <a href="#">波澜哥原版视频</a> / <a href="#">奥雷讲童年阴影</a>
+                        <a href="#" class="more">更多></a>
+                    </div>
+                </h2>
+                <ul class="video-list clearfix">
+                    <li class="first-video">
+                        <img src="src/pic/yule1.jpg" alt="">
+                        <h4>2017年7月第2周碉堡傻缺视频合辑</h4>
+                        <p>久违的傻缺与VIP为你降温！</p>
+                    </li>
+                    <li><img src="src/pic/yule2.gif" alt="">
+                        <h4>【丛林烹饪】深夜报社！坠吼的牛排～
+                            <p>
+                                <i class="iconfont icon-play"> 14644</i>
+                                <b class="iconfont icon-msg"> 186</b>
+                            </p>
+                        </h4>
+
+                    </li>
+                    <li class="img-recommend">
+                        <span>推荐</span>
+                        <img src="src/pic/yule3.gif" alt="">
+                        <h4>主人你啥时候去精神病院啊~~~~~~~~~~~~~
+                            <p><i class="iconfont icon-play"> 6666</i><b class="iconfont icon-msg"> 66</b></p>
+                        </h4>
+                    </li>
+                    <li><img src="src/pic/yule4.jpg" alt="">
+                        <h4>让可爱的妹子主动说亲你，这套路你敢用吗？
+                            <p><i class="iconfont icon-play"> 6666</i><b class="iconfont icon-msg"> 66</b></p>
+                        </h4>
+                    </li>
+                    <li class="img-recommend">
+                        <span>推荐</span><img src="src/pic/yule5.jpg" alt="">
+                        <h4>【木鱼微剧场】《比利林恩的中场战事》
+                            <p><i class="iconfont icon-play"> 6666</i><b class="iconfont icon-msg"> 66</b></p>
+                        </h4>
+                    </li>
+                    <li><img src="src/pic/yule6.jpg" alt="">
+                        <h4>从1.4元炒到7800元一斤，这种鱼真有那么好吃吗？
+                            <p><i class="iconfont icon-play"> 6666</i><b class="iconfont icon-msg"> 66</b></p>
+                        </h4>
+                    </li>
+                    <li><img src="src/pic/yule7.jpg" alt="">
+                        <h4>老夫的少女心啊，妹子一笑我心都化了
+                            <p><i class="iconfont icon-play"> 6666</i><b class="iconfont icon-msg"> 66</b></p>
+                        </h4>
+                    </li>
+                    <li class="img-recommend">
+                        <span>推荐</span><img src="src/pic/yule8.jpg" alt="">
+                        <h4>【地球OL】你的人生已欠费是时候充值了 Vol.12
+                            <p><i class="iconfont icon-play"> 6666</i><b class="iconfont icon-msg"> 66</b></p>
+                        </h4>
+                    </li>
+                    <li><img src="src/pic/yule9.jpg" alt="">
+                        <h4>主播真会玩女神篇25：“兔兔”辣么可爱，为什么不买“兔
+                            <p><i class="iconfont icon-play"> 6666</i><b class="iconfont icon-msg"> 66</b></p>
+                        </h4>
+                    </li>
+                </ul>
+            </div>
+            <div class="column-right">
+                <div class="entertainment-rank">
+                    <div class="rank-type">
+                        <h2>娱乐排行榜</h2>
+                        <ul class="clearfix">
+                            <li class="active">日榜</li>
+                            <li>周榜</li>
+                        </ul>
+                    </div>
+                    <ul class="active rank-list">
+                        <li class='img-li clearfix'>
+                            <span>1</span>
+                            <a href="#"><img src="src/pic/rank-list1.gif" alt=""></a>
+                            <div>
+                                <h5><a href="#">陈一发儿，给我十秒就够满足了！（邮件集锦）</a></h5>
+                                <p><a href="#">UP:萝菽菽</a></p>
+                                <i class="iconfont icon-play">29.8万</i>
+                                <b class="iconfont icon-msg">206</b>
+                            </div>
+                        </li>
+                        <li class="img-li clearfix">
+                            <span>2</span>
+                            <a href="#"><img src="src/pic/rank-list2.jpeg" alt=""></a>
+                            <div>
+                                <h5><a href="#">世界最深的泳池，看完感觉整个人都缺氧了~</a></h5>
+                                <p><a href="#">UP:黑白天空~~</p></a>
+                                    <i class="iconfont icon-play">11.4万</i>
+                                    <b class="iconfont icon-msg">80</b>
+                            </div>
+                        </li>
+                        <li class="img-li clearfix">
+                            <span>3</span>
+                            <a href="#"><img src="src/pic/yule4.jpg" alt=""></a>
+                            <div>
+                                <h5><a href="#">让可爱的妹子主动说亲你，这套路你敢用吗？</a></h5>
+                                <p><a href="#">UP:走路的毛线</p></a>
+                                    <i class="iconfont icon-play">10.9万</i>
+                                    <b class="iconfont icon-msg">111</b>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p><span>4</span>【奥雷】恐怖故事系列第二部《恐怖故事2》速看</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p><span>5</span>柯基混血阿拉斯加，一瞬间整个世界都喜感了！</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p><span>6</span>【本宫吐槽】在下有一条神奇的Y染色体，赠予汝可好？</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p><span>7</span>实拍邓紫棋林欣彤香港KTV飙唱功，其他人都不敢拿起话筒了</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p><span>8</span>让可爱的妹子主动说亲你，这套路你敢用吗？</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p><span>9</span>【势不可挡】近日火爆朋友圈的老司机</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p><span>10</span>美国一女子在展览上一不小心推倒了价值20万美元的展品</p>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="rank-list">
+                        <li class='img-li clearfix'>
+                            <span>1</span>
+                            <a href="#"><img src="src/pic/rank-list3.jpg" alt=""></a>
+                            <div>
+                                <h5><a href="#">【阅后即瞎】你爹给你起名字时负责任吗？这儿还有更随便的</a></h5>
+                                <p><a href="#">UP:阅后即瞎</a></p>
+                                <i class="iconfont icon-play">29.8万</i>
+                                <b class="iconfont icon-msg">206</b>
+                            </div>
+                        </li>
+                        <li class="img-li clearfix">
+                            <span>2</span>
+                            <a href="#"><img src="src/pic/rank-list4.gif" alt=""></a>
+                            <div>
+                                <h5><a href="#">那些歌手和歌迷巧遇下的窒息演绎小合集</a></h5>
+                                <p><a href="#">UP:⑧月份的幻想酱</p></a>
+                                    <i class="iconfont icon-play">11.4万</i>
+                                    <b class="iconfont icon-msg">80</b>
+                            </div>
+                        </li>
+                        <li class="img-li clearfix">
+                            <span>3</span>
+                            <a href="#"><img src="src/pic/banna2.gif" alt=""></a>
+                            <div>
+                                <h5><a href="#">【出不去系列】那些被雪藏的超赞视频(第7期)</a></h5>
+                                <p><a href="#">UP:关注撸主三十年</p></a>
+                                    <i class="iconfont icon-play">10.9万</i>
+                                    <b class="iconfont icon-msg">111</b>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p><span>4</span>【超有创意的广告&短视频合集 第二期</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p><span>5</span>食欲不振怎么办，自助旅行自助餐 @野食小哥</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p><span>6</span>【九筒封神榜】美国众神：神仙打架 凡人躺枪</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p><span>7</span>【暴走大事件第五季】22 扎心街访之小学生和王者荣耀，卖火锅的小女孩走进童话版深夜食堂</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p><span>8</span>当你把你的明星女朋友带回家会发生什么呢？</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p><span>9</span>【超有创意广告合集 第三期</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p><span>10</span>人在A站，不外乎摇十三摇，摇着摇着就出不去了</p>
+                            </a>
+                        </li>
+                    </ul>
+                    <button class="view-more">查看完整榜单></button>
                 </div>
             </div>
         </section>
