--- a/index.html
+++ b/index.html
@@ -295,8 +295,12 @@
                             <h4>实验需谨慎！实验失败傻缺集锦</h4>
                             <p class="up-name">UP主：Mr_布鲁</p>
                             <p>
-                                <span class="iconfont icon-play"><b> 12.4万</b></span>
-                                <span class="iconfont icon-3"><b> 302</b></span>
+                                <span class="iconfont icon-play">
+                                    <b> 12.4万</b>
+                                </span>
+                                <span class="iconfont icon-3">
+                                    <b> 302</b>
+                                </span>
                             </p>
                         </div>
                     </li>
@@ -307,8 +311,12 @@
                             <h4>《合金弹头》中的双结局你知道吗？</h4>
                             <p class="up-name">UP主：游研社</p>
                             <p>
-                                <span class="iconfont icon-play"><b> 13.5万</b></span>
-                                <span class="iconfont icon-3"><b> 244</b></span>
+                                <span class="iconfont icon-play">
+                                    <b> 13.5万</b>
+                                </span>
+                                <span class="iconfont icon-3">
+                                    <b> 244</b>
+                                </span>
                             </p>
                         </div>
                     </li>
@@ -319,8 +327,12 @@
                             <h4>外国COS来了IANIME EXPO2017</h4>
                             <p class="up-name">UP主：琴吹口柚</p>
                             <p>
-                                <span class="iconfont icon-play"><b> 15557</b></span>
-                                <span class="ionfont icon-3"><b> 38</b></span>
+                                <span class="iconfont icon-play">
+                                    <b> 15557</b>
+                                </span>
+                                <span class="iconfont icon-3">
+                                    <b> 38</b>
+                                </span>
                             </p>
                         </div>
                     </li>
@@ -331,8 +343,12 @@
                             <h4>天上天下 极乐净土</h4>
                             <p class="up-name">UP主：吖静sizu222</p>
                             <p>
-                                <span class="iconfont icon-play"><b> 23243</b></span>
-                                <span class="ionfont icon-3"><b> 43</b></span>
+                                <span class="iconfont icon-play">
+                                    <b> 23243</b>
+                                </span>
+                                <span class="iconfont icon-3">
+                                    <b> 43</b>
+                                </span>
                             </p>
                         </div>
                     </li>
@@ -2109,7 +2125,72 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer-wrap center">
+            <div class="footer-top clearfix">
+                <ul class="clearfix">
+                    <li>
+                        <h5>合作</h5>
+                        <p>
+                            <a href="#">关于我们</a>
+                            <a href="#">联系我们</a>
+                            <a href="#">AC招聘</a>
+                        </p>
+                    </li>
+                    <li>
+                        <h5>官方</h5>
+                        <p>
+                            <a href="#">新浪微博</a>
+                            <a href="#">官方网店</a>
+                            <a href="#">游戏中心</a>
+                            <a href="#">微信公众号</a>
+                        </p>
+                    </li>
+                    <li class="download">
+                        <h5>下载</h5>
+                        <p><a href="#">移动客户端</a>
+                            <a href="#">AC娘表情包</a>
+                        </p>
+                    </li>
+                    <li>
+                        <h5>友情链接</h5>
+                        <p>
+                            <a href="#">斗鱼直播</a>
+                            <a href="#">匿名版</a>
+                            <a href="#">AC大逃杀</a>
+                        </p>
+                    </li>
+                    <li class="feedback">
+                        <h5>反馈</h5>
+                        <p>
+                            <a href="#">意见反馈</a>
+                            <a href="#">举报</a>
+                            <a href="#">帮助中心</a>
+                            <a href="#">免责声明</a>
+                            <a href="#">用户协议</a>
+                        </p>
+                    </li>
+                </ul>
+                <div class="ac-girl">
+                    <img class="middle" src="src/pic/acgirl.gif" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="footer-main center clearfix">
+            <p><a href="#">中国互联网举报中心</a></p>
+            <p><a href="#">京ICP备15067359号</a></p>
+            <p><a href="#">京ICP证161323号</a></p>
+            <p><a href="#">节目制作经营许可证（京）字第05158号</a></p>
+            <p><a href="#">网络文化经营单位</a></p>
+            <p><a href="#">北京互联网举报中心</a></p>
+            <p><a href="#">京网文[2016]0948-099号</a></p>
+            <p><a href="#">网络110报警服务</a></p>
+            <p><a href="#">京公网安备 11010502032340号</a></p>
+            <p><a href="#">北京12318文化市场举报热线</a></p>
+        </div>
+        <div class="footer-bottom">
+            <img src="src/pic/acfun.png" alt="">
+            <p>本站不提供任何视听上传服务，所有内容均来自视频分享站点所提供的公开引用资源。Copyright © 2007-2017 AcFun. 保留所有权利</p>
+        </div>
     </footer>
 </body>
 
