--- a/index.html
+++ b/index.html
@@ -387,9 +387,9 @@
                     <li>
                         <a href="#"><img src="src/pic/8.gif" alt="8.gif"></a>
                         <a href="#">
-                            <p>去世神医，只赚黑心钱</p>
+                            <p>给威震天配音需要怎样的技巧</p>
                         </a>
-                        <a href="#"><span>UP：祖传格格</span></a>
+                        <a href="#"><span>UP：yusujia</span></a>
                     </li>
                     <li><img src="src/pic/9.png" alt="9.png"></li>
                 </ul>
@@ -1839,7 +1839,7 @@
                     </li>
                     <li class="img-recommend"><img src="src/pic/keji5.jpg" alt="">
                         <span>推荐</span>
-                        <h4>什么黑科技？无网络也能打电话上网，关键不花钱，各大电信怎么活
+                        <h4>什么黑科技？无网络也能打电话上网，关键还不花钱
                             <p><i class="iconfont icon-play"> 1668</i><b class="iconfont icon-msg"> 26</b></p>
                         </h4>
                     </li>
@@ -1851,7 +1851,7 @@
                     </li>
                     <li>
                         <img src="src/pic/keji7.jpg" alt="">
-                        <h4>【探索求真】移植人头！中国医学的突破还是疯狂？@油兔不二字幕组
+                        <h4>【探索求真】移植人头！中国医学的突破还是疯狂？
                             <p><i class="iconfont icon-play"> 4712</i><b class="iconfont icon-msg"> 20</b></p>
                         </h4>
                     </li>
@@ -1989,7 +1989,7 @@
                         </h4>
                     </li>
                     <li><img src="src/pic/tiyu3.gif" alt="">
-                        <h4>恐高慎点：东京屋顶跑酷
+                        <h4>火辣的夏天，当然看比基尼美女极限冲浪！
                             <p><i class="iconfont icon-play"> 29656</i><b class="iconfont icon-msg"> 87</b></p>
                         </h4>
                     </li>
@@ -2013,7 +2013,7 @@
                     </li>
                     <li>
                         <img src="src/pic/tiyu7.gif" alt="">
-                        <h4>【热搬运】健身 | 攻破格斗世界难题，马保国老师晃着破裸绞。
+                        <h4>【热搬运】健身 | 攻破格斗世界难题
                             <p><i class="iconfont icon-play"> 4712</i><b class="iconfont icon-msg"> 20</b></p>
                         </h4>
                     </li>
