--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="header-banner">
-            <!--<img src="./src/pic/banner.jpg" alt="进化论这个问题，我们要好好谈一谈">-->
+            <div class=" bubble">进化论这个问题，我们要好好谈一谈</div>
         </div>
         <nav class="clearfix">
             <ul>
@@ -1336,7 +1336,7 @@
                     </li>
                     <li class="img-recommend">
                         <span>推荐</span><img src="src/pic/music4.jpg" alt="">
-                        <h4>【满汉】炸鸡之歌【特曼X小魂X伦桑X海疼】请你来吃鸡（//
+                        <h4>【满汉】炸鸡之歌【特曼X小魂X伦桑X海疼】
                             <p><i class="iconfont icon-play"> 3399</i><b class="iconfont icon-msg"> 15</b></p>
                         </h4>
                     </li>
