--- a/index.html
+++ b/index.html
@@ -18,8 +18,39 @@
             <div class="header-top clearfix">
                 <a href="#"><img src="./src/pic/logo.png" alt="acfunLogo"></a>
                 <div class="search clearfix">
-                    <input type="text" name="search" placeholder="2017年6月Steam销量月榜">
+                    <input id="search-input" type="text" name="search" placeholder="steam销量周榜第27期">
                     <button class="iconfont icon-search"></button>
+                    <div id="hot-search">
+                        <div class="today-hot-search">
+                            <h4>今日热搜</h4>
+                            <ul>
+                                <li>
+                                    <p class="hot-top3"><a href="#"><i>1</i>阅后即瞎</a>
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="hot-top3"><a href="#"><i>2</i>steam销量周榜</a>
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="hot-top3"><a href="#"><i>3</i>CS:GO</a>
+                                    </p>
+                                </li>
+                                <li>
+                                    <p><a href="#"><i>4</i>木鱼微剧场</a></p>
+                                </li>
+                                <li>
+                                    <p><a href="#"><i>5</i>新垣结衣</a></p>
+                                </li>
+                                <li>
+                                    <p><a href="#"><i>6</i>中国交通事故合集</a></p>
+                                </li>
+                                <li>
+                                    <p><a href="#"><i>7</i>LPL</a></p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
 
                 <ul class="user clearfix">
