optimise css and html of rank

--- a/index.html
+++ b/index.html
@@ -687,11 +687,11 @@
         </section>
         <section class="entertainment center clearfix">
             <div class="column-left">
-                <h2>
+                <h2 class="video-title">
                     <img src="src/icon/fish.gif" alt="">
                     <a href="#">娱乐</a>
                     <button><i class="iconfont icon-refresh"></i>换一批</button>
-                    <div class="title-right middle">
+                    <div class="title-right ">
                         <a href="#">波澜哥原版视频</a> / <a href="#">奥雷讲童年阴影</a>
                         <a href="#" class="more">更多></a>
                     </div>
@@ -753,7 +753,7 @@
                 </ul>
             </div>
             <div class="column-right">
-                <div class="rank entertainment-rank">
+                <div class="rank ">
                     <div class="rank-type">
                         <h2>
                             <a href="#">娱乐排行榜</a></h2>
@@ -902,11 +902,11 @@
         </section>
         <section class="game center clearfix">
             <div class="column-left">
-                <h2>
+                <h2 class="video-title">
                     <img src="src/icon/game.gif" alt="">
                     <a href="#">游戏</a>
                     <button><i class="iconfont icon-refresh"></i>换一批</button>
-                    <div class="title-right middle">
+                    <div class="title-right ">
                         <a style="width: 20px;"></a>
                         <a href="#">Steam国区夏促成绩单</a>
                         <a href="#" class="more">更多></a>
@@ -969,7 +969,7 @@
                 </ul>
             </div>
             <div class="column-right">
-                <div class="rank game-rank">
+                <div class="rank ">
                     <div class="rank-type">
                         <h2>
                             <a href="#">游戏排行榜</a></h2>
@@ -1118,11 +1118,11 @@
         </section>
         <section class="commic center clearfix">
             <div class="column-left">
-                <h2>
+                <h2 class="video-title">
                     <img src="src/icon/angel.gif" alt="">
                     <a href="#">动画</a>
                     <button><i class="iconfont icon-refresh"></i>换一批</button>
-                    <div class="title-right middle">
+                    <div class="title-right ">
                         <a href="#">很多的MMD新毒，你懂的</a>
                         <a href="#" class="more">更多></a>
                     </div>
@@ -1185,7 +1185,7 @@
                 </ul>
             </div>
             <div class="column-right">
-                <div class="rank commic-rank">
+                <div class="rank ">
                     <div class="rank-type">
                         <h2>
                             <a href="#">动画排行榜</a></h2>
@@ -1334,11 +1334,11 @@
         </section>
         <section class="music center clearfix">
             <div class="column-left">
-                <h2>
+                <h2 class="video-title">
                     <img src="src/icon/music.gif" alt="">
                     <a href="#">音乐</a>
                     <button><i class="iconfont icon-refresh"></i>换一批</button>
-                    <div class="title-right middle">
+                    <div class="title-right ">
                         <a href="#">毁歌祭投稿征集中 </a> /
                         <a href="#">AcFun音乐投票新趋榜</a>
                         <a href="#" class="more">更多></a>
@@ -1397,7 +1397,7 @@
                 </ul>
             </div>
             <div class="column-right">
-                <div class="rank music-rank">
+                <div class="rank ">
                     <div class="rank-type">
                         <h2>
                             <a href="#">音乐排行榜</a></h2>
@@ -1496,11 +1496,11 @@
         </section>
         <section class="dance center clearfix">
             <div class="column-left">
-                <h2>
+                <h2 class="video-title">
                     <img src="src/icon/dance.gif" alt="">
                     <a href="#">舞蹈·彼女</a>
                     <button><i class="iconfont icon-refresh"></i>换一批</button>
-                    <div class="title-right middle">
+                    <div class="title-right ">
                         <a href="#">黑丝白丝都是好丝 </a> /
                         <a href="#">晚上一个人要小心哦!</a>
                         <a href="#" class="more">更多></a>
@@ -1561,7 +1561,7 @@
                 </ul>
             </div>
             <div class="column-right">
-                <div class="rank dance-rank">
+                <div class="rank ">
                     <div class="rank-type">
                         <h2>
                             <a href="#">舞蹈排行榜</a></h2>
@@ -1666,11 +1666,11 @@
         </section>
         <section class="fish center clearfix">
             <div class="column-left">
-                <h2>
+                <h2 class="video-title">
                     <img src="src/icon/frog.gif" alt="">
                     <a href="#">鱼塘</a>
                     <button><i class="iconfont icon-refresh"></i>换一批</button>
-                    <div class="title-right middle">
+                    <div class="title-right ">
                         <a href="#">军武次位面 </a> /
                         <a href="#">每日一方</a>
                         <a href="#" class="more">更多></a>
@@ -1732,7 +1732,7 @@
                 </ul>
             </div>
             <div class="column-right">
-                <div class="rank fish-rank">
+                <div class="rank ">
                     <div class="rank-type">
                         <h2>
                             <a href="#">鱼塘排行榜</a></h2>
@@ -1832,11 +1832,11 @@
         </section>
         <section class="technology center clearfix">
             <div class="column-left">
-                <h2>
+                <h2 class="video-title">
                     <img src="src/icon/knife.gif" alt="">
                     <a href="#">科技</a>
                     <button><i class="iconfont icon-refresh"></i>换一批</button>
-                    <div class="title-right middle">
+                    <div class="title-right ">
                         <a href="#">换源补档必学教程</a>
                         <a href="#" class="more">更多></a>
                     </div>
@@ -1894,7 +1894,7 @@
                 </ul>
             </div>
             <div class="column-right">
-                <div class="rank technology-rank">
+                <div class="rank ">
                     <div class="rank-type">
                         <h2>
                             <a href="#">科技排行榜</a></h2>
@@ -1994,11 +1994,11 @@
         </section>
         <section class="sports center clearfix">
             <div class="column-left">
-                <h2>
+                <h2 class="video-title">
                     <img src="src/icon/strong.gif" alt="">
                     <a href="#">体育</a>
                     <button><i class="iconfont icon-refresh"></i>换一批</button>
-                    <div class="title-right middle">
+                    <div class="title-right ">
                         <a href="#">女性健身：运动内衣如何挑？</a>
                         <a href="#" class="more">更多></a>
                     </div>
@@ -2056,7 +2056,7 @@
                 </ul>
             </div>
             <div class="column-right">
-                <div class="rank sports-rank">
+                <div class="rank ">
                     <div class="rank-type">
                         <h2>
                             <a href="#">体育排行榜</a></h2>
@@ -2202,7 +2202,7 @@
                     </li>
                 </ul>
                 <div class="ac-girl">
-                    <img class="middle" src="src/pic/acgirl.gif" alt="">
+                    <img src="src/pic/acgirl.gif" alt="">
                 </div>
             </div>
         </div>
